[tool.poetry]
name = "pop2piano_UI"
version = "0.1.0"
description = "pop2piano on gradio"
license = ""
authors = ["Masaki Aota"]
maintainers = ["Masaki Aota <aotamasakimail@gmail.com>"]
readme = "README.md"
keywords = [
    "Python",
    "gradio",
    "audio",
    "music",
    "piano",
]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.8"
pretty-midi = "0.2.9"
omegaconf = "2.1.1"
youtube-dl = "2021.12.17"
essentia = "2.1b6.dev1034"
note-seq = "0.0.5"
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu116/torchaudio-0.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl"}
transformers = "4.16.1"
pytorch-lightning = "1.8.4"
pyfluidsynth = "1.3.0"
bokeh = "2.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.10.1"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
flake8 = "^5.0.0"
mypy = "^1.0.1"
pytest-cov = "^4.0.0"
jupyterlab-git = "^0.41.0"
jupyterlab = "^4.0.3"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.8
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
